--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -2,3 +2,4 @@ vscode:
   extensions:
     - mechatroner.rainbow-csv@1.7.1:C5MaYD4kWM2oqBCpLXzXNA==
     - vscjava.vscode-maven@0.21.2:tFEkt2FqLujaNTLU5AmRiQ==
+    - codezombiech.gitignore@0.6.0:oJP0UqwrXt2Qgt5QRm1BIQ==
