--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,3 +3,8 @@ vscode:
     - mechatroner.rainbow-csv@1.7.1:C5MaYD4kWM2oqBCpLXzXNA==
     - vscjava.vscode-maven@0.21.2:tFEkt2FqLujaNTLU5AmRiQ==
     - codezombiech.gitignore@0.6.0:oJP0UqwrXt2Qgt5QRm1BIQ==
+    - mhutchie.git-graph@1.28.0:8NH1WgOknx0p2byYkmBcrQ==
+    - donjayamanne.githistory@0.6.14:TIYIMdKWHLFlsJYll5LNsA==
+    - eamodio.gitlens@11.2.1:XEb1nHTl4U+rADX7Yzfgng==
+    - reduckted.vscode-gitweblinks@2.3.0:3DLrLpucmTzBIefwl1BMuQ==
+    - caponetto.vscode-diff-viewer@1.1.1:2Hu660FHk2lvXzT4oy03lw==
